# ZEngine

./: CMakeLists.txt  build.bat
include/freetype/freetype/: freetype.h
lib/mac/: libfreetype.6.dylib  libsoillib.dylib
lib/windows/: SOIL.lib  freetyped.lib  glew32sd.lib  glfw3.lib
resources/: texture.frag  texture.vs
resources/shadow_mapping/: shadow_mapping.vs
src/: CMakeLists.txt  camera.h  game.cpp  game.h  main.cpp  shader.h  shadermanager.cpp  shadermanager.h  stb_image.h
src/renderer/: renderer.cpp  renderer.h
src/samples/assimp/: main.cpp
src/samples/basic_lighting/: main.cpp
src/samples/blending/: main.cpp
src/samples/bloom/: main.cpp
src/samples/cubemaps/: main.cpp
src/samples/depth_testing/: main.cpp
src/samples/framebuffer/: main.cpp
src/samples/hdr/: main.cpp
src/samples/light/: main.cpp
src/samples/lighting_map/: main.cpp
src/samples/materials/: main.cpp
src/samples/msaa/: main.cpp
src/samples/normal_map/: main.cpp
src/samples/shadow_mapping/: main.cpp
src/samples/stencil_testing/: main.cpp
src/samples/texture/: main.cpp
src/utils/: font.cpp  font.h  log.cpp  memory.cpp  time.cpp  time.h
src/zengine/: game.cpp  mesh.h  model.h  shadermanager.h
src/zengine/renderer/: renderer.cpp  renderer.h
src/zengine/utils/: font.cpp  font.h  log.cpp  log.h  time.cpp  time.h
